<resources>
    <string name="app_name">Recall Quest 1.0</string>
    <string name="moves_to_the_next_page_for_practice_games">Moves to the next page for practice games</string>
    <string name="practice">Practice</string>
    <string name="moves_to_multiplayer_setup">Moves to multiplayer setup</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="stats">Stats</string>
    <string name="host_button_text">Host</string>
    <string name="join_button_text">Join</string>
    <string name="start">Begin Quest</string>
    <string name="just_an_image">Just an Image</string>
    <string name="too_easy">Too Easy</string>
    <string name="impossible">Impossible</string>
    <string name="warrior">Warrior</string>
    <string name="time">Time</string>
    <string name="easy_mode">You are in Easy Mode</string>
    <string name="medium_mode">This is NOT Easy Mode</string>
    <string name="difficult_mode">You can\'t finish this one</string>
    <string name="get_ready_for_the_ultimate_quest">Get Ready for the Ultimate Quest!</string>
    <string name="choose_level">Choose Level</string>
    <string name="time_30">Time : 30</string>
    <string name="export_easy_mode_data">Easy Mode Data</string>
    <string name="export_medium_mode_data">Medium Mode Data</string>
    <string name="bullet_points">
    &#8226; SQLite data needs root permission to be viewed.\n&#8226; .csv makes data accessible.\n&#8226; Easy to view and share.
</string>
    <string name="lan_nul">LAN Multiplayer</string>
    <string name="hotspot_text">Turn on your phone\'s hotspot and make sure your friends\' are connected to your hotspot.</string>
    <string name="host_start">Start Game</string>
    <string name="players_host">Waiting for players to join</string>
    <string name="join">Join</string>
    <string name="leftBracket"><![CDATA[<]]></string>
    <string name="host_name">Host Name</string>
    <string name="rightBracket"><![CDATA[>]]></string>
    <string name="just_a_bracket">Just a bracket</string>
    <string name="just_left_bracket">Just left bracket</string>
    <string name="players_in_the_game">Players in the Game</string>
    <string name="name">Name</string>


</resources>