<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="368dp"
        android:layout_height="298dp"
        android:contentDescription="@string/just_an_image"
        android:src="@drawable/with_glasses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/host_button"
        android:layout_width="206dp"
        android:layout_height="104dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/host_button_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#76FF03"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/join_button"
        android:layout_width="219dp"
        android:layout_height="109dp"
        android:background="@drawable/rounded_button2"
        android:text="@string/join_button_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#040404"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>