<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E4EA8C"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/host_button"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:background="@drawable/host_button_r"
        android:fontFamily="sans-serif-medium"
        android:text="@string/host_button_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#64DD17"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <Button
        android:id="@+id/join_button"
        android:layout_width="273dp"
        android:layout_height="114dp"
        android:background="@drawable/rounded_button2"
        android:text="@string/join_button_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#040404"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.608" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:text="@string/lan_nul"
        android:textAlignment="center"
        android:textColor="#33691E"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />
</androidx.constraintlayout.widget.ConstraintLayout>